# voice-assistant

./: .gitignore  main.py  pyproject.toml  requirements.txt
data/: catalogo_intenciones.json
docs/: alsa_mic_compartido.md  funciones_post_wakeup.md  redis_reunion_node.md  wake_turn.md  wake_word_rendimiento_raspberry.md
models/wakewords/: hey_box_device.onnx
src/voice_assistant/: __init__.py  audio.py  captura_continua.py  config.py  config_theme.py  intents.py  pipeline.py  redis_reunion.py  stt.py  wake.py
src/voice_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/voice_assistant/audio/: __init__.py  captura_continua.py  capture.py  dispositivo.py  formato_pipeline.py  wav_io.py
src/voice_assistant/integrations/: __init__.py  redis_reunion.py
src/voice_assistant/intents/: __init__.py  catalogo.py  ejecutor.py  manejadores.py
src/voice_assistant/pipeline/: __init__.py  turno_wake_stt_intent.py
src/voice_assistant/stt/: __init__.py  whisper_local.py
src/voice_assistant/wake/: __init__.py  openwakeword_stream.py
