[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-assistant"
version = "0.1.0"
description = "Asistente de voz (captura de audio y sucesivas iteraciones)"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "sounddevice>=0.4.6",
    "openwakeword>=0.5.1",
    "faster-whisper>=1.0.0",
    "redis>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
